--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main>
     </main>
+    <script src="main/vn_objects.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
