Testing with the parser

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <main>
     </main>
     <script src="main/vn_objects.js"></script>
+    <script src="main/vn_parser.js"></script>
+    <script src="main/vn_handler.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
