--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
     </main>
     <script src="main/vn_objects.js"></script>
+    <script src="assets/scene_can.js"></script>
     <script src="main/vn_handler.js"></script>
     <script src="sketch.js"></script>
   </body>
