--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </main>
     <script src="main/vn_objects.js"></script>
     <script src="main/vn_parser.js"></script>
-    <script src="main/vn_handler.js"></script>
+    <script src="main/vn_globals.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
